--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.39"
-clap = "4.5.23"
+clap = { version = "4.5.23", features = ["derive"] }
 rusqlite = "0.32.1"
