--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.39"
 clap = { version = "4.5.23", features = ["derive"] }
+dirs = "5.0.1"
 rusqlite = "0.32.1"
