--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.39"
 clap = { version = "4.5.23", features = ["derive"] }
+csv = "1.3.1"
 dirs = "5.0.1"
 rusqlite = "0.32.1"
+serde = { version = "1.0.217", features = ["derive"] }
